--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,7 +88,7 @@
             <p>
                 <a href="#faq">FAQ</a> | 
                 <a href="#nosotros">Nosotros</a> | 
-                <a href="#contacto">Contacto</a>
+                <a href="contact.html">Contacto</a>
             </p>
         </div>
     </footer>
