Se agrego metodo de pago sin estilo

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -99,7 +99,7 @@
     <hr />
 
     <h3>Gráfica de Ventas por Categoría</h3>
-    <button id="loadChartBtn">Ver Gráfica</button>
+    <button id="loadChartBtn">Ver Gráfica de Ventas</button>
 
     <!-- Canvas para la gráfica -->
     <canvas
