--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,31 +3,128 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro</title>
+    <title>Registro - TechStore</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
+
   <body>
-    <h1>Registro de Usuario</h1>
+    <!-- ============================================ -->
+    <!-- HEADER (idéntico al del index/login) -->
+    <!-- ============================================ -->
+    <header>
+      <div class="container">
+        <div class="header-content">
+          <!-- Logo -->
+          <a href="index.html" class="logo">
+            <img
+              src="https://img.icons8.com/nolan/64/processor.png"
+              alt="TechStore Logo"
+            />
+            <div class="logo-text">
+              <h1>TechStore</h1>
+              <p>Potencia tu PC</p>
+            </div>
+          </a>
 
-    <form id="registerForm">
-      <label>Nombre:</label><br />
-      <input type="text" id="nombre" required /><br /><br />
+          <!-- User Info -->
+          <div class="user-info">
+            <!-- Accesibilidad -->
+            <div class="accessibility-controls">
+              <button id="themeToggle" class="icon-btn" title="Cambiar tema">
+                🌙
+              </button>
+              <button
+                id="increaseFontBtn"
+                class="icon-btn"
+                title="Aumentar texto"
+              >
+                A⁺
+              </button>
+              <button
+                id="decreaseFontBtn"
+                class="icon-btn"
+                title="Reducir texto"
+              >
+                A⁻
+              </button>
+            </div>
 
-      <label>Email:</label><br />
-      <input type="email" id="email" required /><br /><br />
+            <a href="login.html" id="loginLink" class="btn-primary"
+              >Iniciar Sesión</a
+            >
+            <button id="logoutBtn" class="btn-secondary" style="display: none">
+              Cerrar Sesión
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
 
-      <label>Contraseña:</label><br />
-      <input type="password" id="password" required /><br /><br />
+    <!-- ============================================ -->
+    <!-- MAIN -->
+    <!-- ============================================ -->
+    <main>
+      <div class="container">
+        <div class="auth-card">
+          <h2 class="auth-title">Crear Cuenta</h2>
 
-      <label>Confirmar Contraseña:</label><br />
-      <input type="password" id="password2" required /><br /><br />
+          <form id="registerForm" class="auth-form">
+            <div class="form-group">
+              <label>Nombre:</label>
+              <input type="text" id="nombre" required />
+            </div>
 
-      <button type="submit">Registrarse</button>
-    </form>
+            <div class="form-group">
+              <label>Email:</label>
+              <input type="email" id="email" required />
+            </div>
 
-    <p id="message"></p>
+            <div class="form-group">
+              <label>Contraseña:</label>
+              <input type="password" id="password" required />
+            </div>
 
-    <p>¿Ya tienes cuenta? <a href="login.html">Inicia sesión</a></p>
+            <div class="form-group">
+              <label>Confirmar Contraseña:</label>
+              <input type="password" id="password2" required />
+            </div>
 
+            <button type="submit" class="btn-primary w-100">Registrarse</button>
+          </form>
+
+          <p id="message" class="auth-message"></p>
+
+          <p class="auth-links">
+            ¿Ya tienes cuenta?
+            <a href="login.html">Inicia sesión</a>
+          </p>
+        </div>
+      </div>
+    </main>
+
+    <!-- ============================================ -->
+    <!-- FOOTER -->
+    <!-- ============================================ -->
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-brand">
+            <h2>TechStore</h2>
+            <p>Potencia tu PC con los mejores componentes</p>
+          </div>
+
+          <div class="footer-links">
+            <a href="faq.html">FAQ</a>
+            <a href="contact.html">Contacto</a>
+            <a href="admin.html">Admin</a>
+          </div>
+
+          <div class="footer-copyright">© 2025 TechStore</div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="js/accessibility.js"></script>
     <script src="js/register.js"></script>
   </body>
 </html>
