--- a/frontend/reset-password.html
+++ b/frontend/reset-password.html
@@ -4,40 +4,121 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nueva Contraseña - TechStore</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
+
   <body>
-    <h1>Restablecer Contraseña - TechStore</h1>
+    <!-- ============================================ -->
+    <!-- HEADER (igual que en toda la tienda) -->
+    <!-- ============================================ -->
+    <header>
+      <div class="container">
+        <div class="header-content">
+          <!-- Logo -->
+          <a href="index.html" class="logo">
+            <img
+              src="https://img.icons8.com/nolan/64/processor.png"
+              alt="TechStore Logo"
+            />
+            <div class="logo-text">
+              <h1>TechStore</h1>
+              <p>Potencia tu PC</p>
+            </div>
+          </a>
 
-    <p><a href="login.html">← Volver al login</a></p>
+          <div class="user-info">
+            <!-- Accesibilidad -->
+            <div class="accessibility-controls">
+              <button id="themeToggle" class="icon-btn" title="Cambiar tema">
+                🌙
+              </button>
+              <button
+                id="increaseFontBtn"
+                class="icon-btn"
+                title="Aumentar texto"
+              >
+                A⁺
+              </button>
+              <button
+                id="decreaseFontBtn"
+                class="icon-btn"
+                title="Reducir texto"
+              >
+                A⁻
+              </button>
+            </div>
 
-    <hr />
+            <a href="login.html" id="loginLink" class="btn-primary"
+              >Iniciar Sesión</a
+            >
+            <button id="logoutBtn" class="btn-secondary" style="display: none">
+              Cerrar Sesión
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
 
-    <p>Ingresa tu nueva contraseña.</p>
+    <!-- ============================================ -->
+    <!-- MAIN -->
+    <!-- ============================================ -->
+    <main>
+      <div class="container">
+        <div class="auth-card">
+          <h2 class="auth-title">Restablecer Contraseña</h2>
 
-    <form id="resetPasswordForm">
-      <label>Nueva Contraseña:</label><br />
-      <input
-        type="password"
-        id="newPassword"
-        required
-        style="width: 300px; padding: 8px"
-      /><br /><br />
+          <p class="text-center" style="margin-bottom: 1rem">
+            Ingresa tu nueva contraseña.
+          </p>
 
-      <label>Confirmar Contraseña:</label><br />
-      <input
-        type="password"
-        id="confirmPassword"
-        required
-        style="width: 300px; padding: 8px"
-      /><br /><br />
+          <form id="resetPasswordForm" class="auth-form">
+            <div class="form-group">
+              <label>Nueva contraseña:</label>
+              <input type="password" id="newPassword" required />
+            </div>
 
-      <button type="submit" style="padding: 10px 20px">
-        Cambiar Contraseña
-      </button>
-    </form>
+            <div class="form-group">
+              <label>Confirmar contraseña:</label>
+              <input type="password" id="confirmPassword" required />
+            </div>
 
-    <p id="message"></p>
+            <button type="submit" class="btn-primary w-100">
+              Cambiar Contraseña
+            </button>
+          </form>
 
+          <p id="message" class="auth-message"></p>
+
+          <p class="auth-links">
+            <a href="login.html">← Volver al login</a>
+          </p>
+        </div>
+      </div>
+    </main>
+
+    <!-- ============================================ -->
+    <!-- FOOTER -->
+    <!-- ============================================ -->
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-brand">
+            <h2>TechStore</h2>
+            <p>Potencia tu PC con los mejores componentes</p>
+          </div>
+
+          <div class="footer-links">
+            <a href="faq.html">FAQ</a>
+            <a href="contact.html">Contacto</a>
+            <a href="admin.html">Admin</a>
+          </div>
+
+          <div class="footer-copyright">© 2025 TechStore</div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="js/accessibility.js"></script>
     <script src="js/reset-password.js"></script>
   </body>
 </html>
